7_deploy_without_downtime/7_1_rollout_update/test_app/deployment-rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-deployment
  namespace: rolling-update
spec:
  replicas: 1
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
    # type: RollingUpdate
  selector:
    matchLabels:
      app: rolling-deployment
  template:
    metadata:
      labels:
        app: rolling-deployment
    spec:
      containers:
      - name: rolling-deployment
        # image: nginx:latest
        image: nginx:1.19
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: [ "/bin/bash", "-c", "sleep 30 && echo 'you are checking domain rolling-update.mykubernetes.guru' > /usr/share/nginx/html/index.html"]
