7_deploy_without_downtime/7_1_rollout_update/test_app/service-rollout.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-service
  namespace: rollout-update
  labels:
    app: rollout-deployment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: rollout-deployment
