7_deploy_without_downtime/7_1_rollout_update/test_app/ingress-rollout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-update
  namespace: rollout-update
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # old certmanager integration
    certmanager.k8s.io/cluster-issuer: "letsencrypt-practice"
    # new certmanager integration
    cert-manager.io/cluster-issuer: "letsencrypt-practice"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - rollout-update.mykubernetes.guru
      secretName: ssl-letsencrypt
  rules:
  - host: 'rollout-update.mykubernetes.guru'
    http:
      paths:
      - path: /
        backend:
          serviceName: rollout-service
          servicePort: 80
